--- a/setup/myapp/templates/myapp/index.html
+++ b/setup/myapp/templates/myapp/index.html
@@ -9,7 +9,7 @@
         <ul>
             {% for item in item_list%}
             <li>
-                <a href="{% url 'detail' item.id %}">
+                <a href="{% url 'myapp:detail' item.id %}">
                     {{item.item_name}} -> {{item.item_price}}
                 </a>
             </li>
