--- a/setup/myapp/templates/myapp/index.html
+++ b/setup/myapp/templates/myapp/index.html
@@ -1,22 +1,21 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initialize">
-        <title> Document </title>
-    </head>
-    <body>
-        <ul>
-            {% for item in item_list%}
-            <li>
-                <a href="{% url 'myapp:detail' item.id %}">
-                    {{item.item_name}} -> {{item.item_price}}
-                </a>
-            </li>
-            {% endfor %}
-        </ul>
-        
-            
-        
-    </body>
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static 'myapp/style.css' %}">
+    <title>Document</title>
+</head>
+<body>
+    <ul>
+        {% for item in item_list %}
+        <li>
+            <a href="{% url 'myapp:detail' item.id %}">
+                {{ item.item_name }} -> {{ item.item_price }}
+            </a>
+        </li>
+        {% endfor %}
+    </ul>
+</body>
 </html>
