--- a/setup/myapp/templates/myapp/index.html
+++ b/setup/myapp/templates/myapp/index.html
@@ -6,6 +6,7 @@
         {% for item in item_list %}
         <li>
             <a href="{% url 'myapp:detail' item.id %}">
+                <img src="{{item.item_image}}" alt="">
                 {{ item.item_name }} -> {{ item.item_price }}
             </a>
         </li>
