--- a/setup/myapp/templates/myapp/index.html
+++ b/setup/myapp/templates/myapp/index.html
@@ -1,18 +1,30 @@
 {% extends 'myapp/base.html' %}
 
-
 {% block body %}
-    <ul>
-        {% for item in item_list %}
-        <li>
-            <a href="{% url 'myapp:detail' item.id %}">
-                <img src="{{item.item_image}}" alt="">
-                {{ item.item_name }} -> {{ item.item_price }}
-            </a>
-        </li>
-        {% endfor %}
-    </ul>
-{% endblock body %}
-    
-    
+<div>
+    {% for item in item_list %}
+    <div class="flex flex-col md:flex-row items-center m-auto w-11/12 md:w-2/3 py-5 border-b">
+        
+        <!-- Container com proporção fixa -->
+        <div class="w-40 md:w-56 aspect-square">
+            <img class="w-full h-full object-cover rounded-lg" 
+                 src="{{ item.item_image }}" 
+                 alt="{{ item.item_name }}" />
+        </div>
 
+        <div class="flex-1 mx-6 text-center md:text-left">
+            <div class="font-bold text-lg">{{ item.item_name }}</div>
+            <div class="text-green-500 font-semibold">R${{ item.item_price }}</div>
+            <div class="text-gray-600">{{ item.item_desc }}</div>
+        </div>
+
+        <div class="mt-3 md:mt-0">
+            <a class="bg-green-500 hover:bg-green-600 text-white font-bold px-4 py-2 rounded-md transition"
+               href="{% url 'myapp:detail' item.id %}">
+                View
+            </a>
+        </div>
+    </div>
+    {% endfor %}
+</div>
+{% endblock body %}
