--- a/setup/myapp/templates/myapp/detail.html
+++ b/setup/myapp/templates/myapp/detail.html
@@ -1,7 +1,24 @@
 {% extends 'myapp/base.html' %}
 
 {% block body %}
-    <h1>{{ item.item_name}}</h1>
-    <h1>{{ item.item_price}}</h1>
-    <h1>{{ item.item_desc}}</h1>
+    <div class="px-5 mt-10 flex">
+        <img class="w-full h-64 object-cover rounded-lg" src="{{item.item_image}}" alt="">
+
+    </div>
+    <div class="mx-16 space-y-5">
+        <div class="font-bold text-4xl">{{ item.item_name }}</div>
+         <div class="text-green-500 font-semibold">R${{ item.item_price }}</div>
+        <div>{{ item.item_desc }}</div>
+
+        <div class="space-x-6">
+            <a class="bg-yellow-500 px-4 py-2 rounded-md font bold text-white hover:bg-yellow-600"
+            href="">
+                Edit
+            </a>
+            <a class="bg-red-500 px-4 py-2 rounded-md font bold text-white hover:bg-red-600"
+            href="">
+                Delete
+            </a>
+        </div>
+    </div>
 {% endblock body %}
