tested add form

--- a/setup/myapp/templates/myapp/item_form.html
+++ b/setup/myapp/templates/myapp/item_form.html
@@ -1,5 +1,7 @@
 <form method="POST">
     {% csrf_token %}
-    {{form}}
-    <buttom type="submit"> Save </buttom>
+    {{ form }}
+    <button type="submit" class="px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700">
+        Save
+    </button>
 </form>
