--- a/setup/myapp/templates/myapp/base.html
+++ b/setup/myapp/templates/myapp/base.html
@@ -13,7 +13,7 @@
     <nav class="bg-blue-400 text-white">
         <div class="flex justify-between px-2 py-4">
             <div class="font-bold text-2xl">
-                <a href="">Just a Pinch</a>
+                <a href="{% url 'myapp:index' %}">Just a Pinch</a>
             </div>
             
             <div class="space-x-6">
