--- a/setup/myapp/templates/myapp/detail.html
+++ b/setup/myapp/templates/myapp/detail.html
@@ -16,7 +16,7 @@
                 Edit
             </a>
             <a class="bg-red-500 px-4 py-2 rounded-md font bold text-white hover:bg-red-600"
-            href="">
+            href="{% url 'myapp:delete_item' item.id %}">
                 Delete
             </a>
         </div>
