--- a/setup/users/templates/users/register.html
+++ b/setup/users/templates/users/register.html
@@ -1,13 +1,21 @@
-<form method="POST">
-    {% csrf_token %}
-    {{form}}
-    <button type="submit">
-        Save
-    </button>
-</form>
+{% extends 'myapp/base.html' %}
 
-{% if form.errors %}
-    <div class="text-red-600">
-        {{ form.errors }}
-    </div>
-{% endif %}
+
+{% block body %}
+
+    <form method="POST">
+        {% csrf_token %}
+        {{form}}
+        <button type="submit">
+            Register
+        </button>
+    </form>
+
+    {% if form.errors %}
+        <div class="text-red-600">
+            {{ form.errors }}
+        </div>
+    {% endif %}
+    
+{% endblock body %}
+    
