--- a/setup/myapp/templates/myapp/base.html
+++ b/setup/myapp/templates/myapp/base.html
@@ -17,10 +17,8 @@
             </div>
             
             <div class="space-x-6">
-                <a href="">Contact</a>
-                <a href="">Address</a>
-                <a href="">About Us</a>
-                
+
+                <a href="">Are you hungry, {{ user.username}}?</a>
                 {% if user.is_authenticated %}
                     <a href="{% url 'users:logout' %}">Logout</a>
                 {% else %}
